--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "lodash": "4.17.13",
+    "lodash.template": "4.5.0",
     "popper.js": "^1.15.0",
     "typed.js": "^2.0.10"
   },
