--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
+    "fstream": "1.0.12",
     "jquery": "^3.4.1",
     "lodash": "4.17.13",
     "lodash.template": "4.5.0",
