--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "4.17.13",
     "lodash.template": "4.5.0",
     "popper.js": "^1.15.0",
+    "set-value": "^2.0.1",
     "typed.js": "^2.0.10"
   },
   "devDependencies": {
